   * The "tracks have been hidden in the playlist" warning when filtering the playlist is
     now displayed inside the playlist. (BR 260352)
   * Update tag widget for Layout edit, filter edit, organize collection and guess tag
     dialog.
   * When fadeout and/or Replay Gain isn't possible, gray-out related UI elements in order
     not to fool users.

  BUGFIXES:
   * Fix suboptimal initial MusicBrainz tag dialog size by remembering it. (BR 269454)
   * Fix file-browser becoming empty when a file was moved to trash. (BR 317944)
   * Fix `amarok --play file.mp3` option didn't actually start playback.
   * Reason why a particular track is not playable is now shown in playlist tooltip; patch
     by Anmol Ahuja. (BR 313649)
   * Pre-apmlifier in equalizer is now only enabled if it is actually supported; patch by
     Harsh Gupta. (BR 301311)
   * Fix Amarok crashed while doing "Organize Files" (BR 317980)
   * Fix Crash on very long artist names [@ Meta::SqlArtist::SqlArtist]. (BR 276894)
   * Clarify message when Last.fm streams are not available. (BR 315771)
   * Don't remove common labels when editing the tags of multiple tracks. (BR 316043)
   * Fix vertical positioning of On-Screen-Display. (BR 269788)
   * Prevent inability to save Last.fm password in corner cases. (BR 315306)
   * Fix crash when quitting Amarok with Statistics Synchronization open. (BR 315525)
   * Fix items moving around when expanded in collection browser. (BR 305602)
   * Fix bumpy fade-out when first used. (BR 312062)
   * Fix subtle bugs when a long fade-out is initiated near the song end.
   * Don't try to fade-out with phonon backends that don't support it. (vlc)


VERSION 2.7.1
  CHANGES:
   * Problematic support for treating MusicBrainz ids as track unique ids was dropped;
     should avoid surprising "Duplicate Tracks Found" errors. (BR 315329)

  BUGFIXES:
   * Fix inability to reverse "Use Music Location" decision and inability to clear