@@ -52,6 +52,7 @@ VERSION 2.8-Beta 1
      not to fool users.
 
   BUGFIXES:
+   * Fix `amarok --queue` which didn't actually queue the tracks. (BR 317385)
    * Fix suboptimal initial MusicBrainz tag dialog size by remembering it. (BR 269454)
    * Fix file-browser becoming empty when a file was moved to trash. (BR 317944)
    * Fix `amarok --play file.mp3` option didn't actually start playback.
